# Module_Web_10_MHW

./: pyproject.toml
hw_django_project/: db.sqlite3
hw_django_project/hw_django_project/: settings.py  urls.py
hw_django_project/quotes/: views.py
hw_django_project/quotes/templates/quotes/: base.html  index.html
hw_django_project/users/: forms.py  urls.py  views.py
hw_django_project/users/templates/users/: login.html
hw_django_project/utils/: add_quotes_to_mongo.py
